[package]
name = 'error-report'
version = '0.1.0'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = '1.0.6'
once_cell = '1.12.0'
flume = '0.10.12'
crossbeam-utils = '0.8.8'
anyhow = '1.0.57'

[target.'cfg(windows)'.dependencies.windows]
version = '0.37.0'
features = [
    'alloc',
    'Win32_UI_WindowsAndMessaging',
    'Win32_Foundation',
]

[[bin]]
path = 'src/report-multithread.rs'
name = 'report-multithread'
